# takanome

./: Cargo.toml  LICENSE  README.md  takanome
src/: fixer.rs  main.rs  scanner.rs  types.rs
src/agents/: mod.rs
src/agents/openclaw/: mod.rs
src/agents/openclaw/checks/: auth.rs  browser_security.rs  control_ui.rs  cve.rs  dangerous_flags.rs  dm_security.rs  exec_security.rs  file_permissions.rs  group_security.rs  logging.rs  mdns.rs  mod.rs  network.rs  plugins.rs  prompt_injection.rs  reverse_proxy.rs  sandbox.rs  secrets.rs  sub_agents.rs  tool_authorization.rs
src/ai/: analyzer.rs  client.rs  fixer.rs  mod.rs
src/utils/: config.rs  fs.rs  mod.rs  report.rs
